--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "react-scripts": "^5.0.1"
   }
 }
